# hackathon-soat10-phase5-auth-microservice

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
config/: database.py
config/init_db/: init_db.sh
src/: app.py  main.py
src/application/usecases/auth_usecase/: login_customer_usecase.py
src/application/usecases/customer_usecase/: create_customer_usecase.py  delete_customer_usecase.py  get_all_customers_usecase.py  get_customer_by_id_usecase.py  get_customer_by_person_id_usecase.py  update_customer_usecase.py
src/application/usecases/permission_usecase/: delete_permission_usecase.py
src/application/usecases/person_usecase/: delete_person_usecase.py
src/application/usecases/profile_usecase/: delete_profile_usecase.py
src/application/usecases/user_usecase/: delete_user_usecase.py  update_user_password_usecase.py
src/config/: database.py  settings.py
src/config/init_db/: init_db.sh
src/core/: containers.py
src/core/constants/: __init__.py  permissions.py
src/core/domain/dtos/auth/: auth_dto.py
src/core/domain/dtos/customer/: create_customer_dto.py  customer_dto.py  update_customer_dto.py
src/core/domain/dtos/message/: message_dto.py
src/core/domain/dtos/permission/: create_permission_dto.py  permission_dto.py  update_permission_dto.py
src/core/domain/dtos/user/: update_user_dto.py
src/core/domain/entities/: customer.py  permission.py  profile.py  user.py
src/core/ports/customer/: i_customer_repository.py
src/core/shared/: identity_map.py
src/core/utils/: jwt_util.py
src/infrastructure/repositories/sqlalchemy/: customer_repository.py  permission_repository.py  person_repository.py  profile_repository.py  user_repository.py
src/infrastructure/repositories/sqlalchemy/migrations/: env.py
src/infrastructure/repositories/sqlalchemy/models/: __init__.py  base_model.py  customer_model.py  permission_model.py  person_model.py  profile_model.py  profile_permission_model.py  user_model.py
src/presentation/api/v1/controllers/: auth_controller.py  customer_controller.py  permission_controller.py  person_controller.py  profile_controller.py  user_controller.py
terraform/app/: main.tf  mock_remote_state.tf  outputs.tf  variables.tf
terraform/db/: main.tf
tests/: conftest.py  test_health_check.py
tests/factories/: customer_factory.py  permission_factory.py  person_factory.py  profile_factory.py  user_factory.py
tests/src/infrastructure/repository/: test_customer_repository.py  test_permission_repository.py  test_person_repository.py  test_profile_repository.py  test_user_repository.py
(+29 files in other folders)
